--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deep Researcher & Writing Assistant</title>
-    <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/index.css">
 </head>
 <body>
     <main id="app-container">
@@ -22,12 +21,12 @@
             <h2 class="card-title">1. Build Knowledge Base</h2>
             <div id="input-methods">
                  <div class="file-input-wrapper">
-                    <input type="file" id="file-input" class="file-input-hidden" accept=".txt,.md,.text,.pdf" aria-label="Upload text or PDF files" multiple>
+                    <input type="file" id="file-input" class="file-input-hidden" accept=".txt,.md,.text,.pdf,.docx,.doc" aria-label="Upload text, PDF, or Word files" multiple>
                     <label for="file-input" class="button-secondary">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="20" height="20">
                             <path d="M9 16h6v-6h4l-7-7-7 7h4v6zm-4 2h14v2H5v-2z"/>
                         </svg>
-                        <span>Upload File(s) (.txt, .pdf)</span>
+                        <span>Upload File(s) (.txt, .pdf, .docx)</span>
                     </label>
                     <span id="file-name-display" class="file-name-display"></span>
                 </div>
@@ -45,7 +44,7 @@
         <!-- Step 2: Generate Literature Review -->
         <section id="literature-review-section" class="card hidden">
             <h2 class="card-title">2. Generate Literature Review</h2>
-            <p class="section-description">Provide a topic, and the Deep Researcher will generate a draft by iteratively querying the knowledge base, inspired by the TTD-DR framework.</p>
+            <p class="section-description">Provide a topic, and the Deep Researcher will generate a draft by iteratively querying the knowledge base.</p>
             <form id="review-form">
                  <div class="review-options">
                     <span class="review-options-label">Review Length:</span>
@@ -93,7 +92,7 @@
                              <button class="toolbar-button" data-command="insertOrderedList" aria-label="Numbered List"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="18" height="18"><path d="M2 17h2v.5H3v1h1v.5H2v1h3v-4H2v1zm1-9h1V4H2v1h1v3zm-1 3h1.8L2 13.1v.9h3v-1H3.2L5 10.9V10H2v1zm5-6v2h14V5H7zm0 14h14v-2H7v2zm0-6h14v-2H7v2z"/></svg></button>
                         </div>
                         <button id="similarity-check-button" class="button-secondary similarity-button" aria-label="Check for Similarity">
-                            <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24" fill="currentColor" width="18" height="18"><g><path d="M14,2H6C4.9,2,4,2.9,4,4v16c0,1.1,0.9,2,2,2h12c1.1,0,2-0.9,2-2V8L14,2z M16,18H8v-2h8V18z M16,14H8v-2h8V14z M13,9V3.5 L18.5,9H13z"/><path d="M14.17,10.42c-0.29-0.19-0.59-0.35-0.9-0.48C13.62,9.6,14,9.01,14,8.32c0-1.01-0.82-1.83-1.83-1.83 c-1.01,0-1.83,0.82-1.83,1.83c0,0.68,0.38,1.28,0.94,1.58c-0.31,0.14-0.61,0.3-0.9,0.49c-1.3,0.85-2.17,2.37-2.17,4.09h1.5 c0-1.42,0.89-2.67,2.17-3.24c0.4-0.18,0.83-0.32,1.26-0.32s0.86,0.14,1.26,0.32c1.28,0.57,2.17,1.82,2.17,3.24h1.5 C16.33,12.78,15.47,11.26,14.17,10.42z M12.17,8.82c0.28,0,0.5-0.22,0.5-0.5s-0.22-0.5-0.5-0.5s-0.5,0.22-0.5,0.5S11.89,8.82,12.17,8.82 z"/></g></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24" fill="currentColor" width="18" height="18"><g><path d="M14,2H6C4.9,2,4,2.9,4,4v16c0,1.1,0.9,2,2,2h12c1.1,0,2-0.9,2-2V8L14,2z M16,18H8v-2h8V18z M16,14H8v-2h8V14z M13,9V3.5 L18.5,9H13z"/></g></svg>
                             <span>Check for Similarity</span>
                         </button>
                     </div>
@@ -119,8 +118,7 @@
             </div>
         </section>
 
-
-        <!-- Q&A Section (Kept as a separate tool) -->
+        <!-- Q&A Section -->
         <section id="qa-section" class="card hidden">
             <h2 class="card-title">Quick Q&A</h2>
             <div id="chat-container">
@@ -144,15 +142,7 @@
         <p>Processing...</p>
     </div>
 
-    <script type="importmap">
-      {
-        "imports": {
-          "@google/genai": "https://esm.sh/@google/genai@^0.7.0",
-          "pdfjs-dist": "https://esm.sh/pdfjs-dist@4.4.168/build/pdf.mjs"
-        }
-      }
-    </script>
-    <script type="module" src="index.tsx"></script>
-<script type="module" src="/index.tsx"></script>
+    <!-- Load the JavaScript file instead of TypeScript -->
+    <script src="/index.js"></script>
 </body>
 </html>
